* Fixed parsing of quoted keywords in if statements, like 'not' was
  parsed as ! because using {if not $foo} is valid, but it was impossible
  to use them even as string.
* Fixed parsing bug with method calls used as arguments with a comma
  following.
* Fixed parsing of function/constants that start with an underscore, 
  thanks to Dominik del Bondio for the patch

[2010-02-07] 1.1.1
+ Added {optional} plugin that just prints an optional var without any
  notice if it doesn't exist
+ Added Dwoo::setTemplate() for testing purposes mostly
* Fixed an {extends} parsing bug that prevented the use of single-quotes
  around the parent template's filename
* Fixed a security issue, if you didn't use a custom compiler factory but
  passed the compiler directly to the get method with autoEscape enabled,
  the autoEscape was disabled in included templates - Thanks to Fabien
  Potencier for notifying me.
* Fixed a bug in {safe} when using variable-variables it would sometimes
  corrupt the var name resulting in blank output
* Fixed a bug when accessing array indices that contain a minus sign, it
  is now possible to access those using {$var[index-foo]},
  {$var['index-foo']} or {$index="index-foo"} {$var[$index]}
* Fixed a bug in {tif} that didn't work when 0 was given as the true or
  false value
* Fixed a bug when using the autoEscape feature with sub-templates (the
  compiled sub-template couldn't access the dwoo charset property,
  resulting in a fatal error)
* Fixed a property reading bug on objects that implemented __get but not
  __isset, implementing __isset is however very much recommended
* Fixed a Dwoo_Data bug in the append method when the index didn't exist
  yet it threw a notice
* Fixed a bug when accessing global vars from a sub-template
* Fixed a couple bugs in the {dynamic} plugin with regard to using plugins
  within a dynamic block
* Fixed a compilation bug when using a PluginProxy with highly nested calls