@@ -31,6 +31,8 @@
   following.
 * Fixed parsing of function/constants that start with an underscore, 
   thanks to Dominik del Bondio for the patch
+* Adapters: Agavi: Added support for multiple plugin directories in the
+  config, thanks to Mike Seth for the patch
 
 [2010-02-07] 1.1.1
 + Added {optional} plugin that just prints an optional var without any
